# torch-models

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
datasets/: get_amazon_reviews.py
docs/: amazon_cnn_demo.ipynb
src/torch_models/: __init__.py
src/torch_models/dataset/: dataset.py
src/torch_models/loss/: bce_with_weights.py
src/torch_models/models/: base_convolutional_model.py  base_transformer_model.py  basic_input_layer.py  positional_encoding.py
src/torch_models/preprocess/: ordinal_encoder.py  preprocess.py  structured_preprocessing.py
src/torch_models/tokenizers/: bert_wordpiece.py  sentencepiece.py  word_level_tokenizer.py
src/torch_models/train/: train.py
tests/preprocess/: test_ordinal_encoder.py  test_preprocess.py
